--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
-# Byte-compiled / optimized / DLL files
+}# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
 
 # C extensions
 *.so
+*.o
 
 # Distribution / packaging
 .Python
