--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Django==1.11.21
 image==1.5.27
 Pillow==5.4.1
-pyswisseph==2.8.0.post1
+pyswisseph==2.10.3.2
 pytz==2018.9
 six==1.12.0
 wxPython==4.2.1
